# morn

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  pyproject.toml  test_auth_modes.py
.github/workflows/: ci_python.yml
app/: app.py  logging_config.py
app/agents/: callback.py  prompt_loader.py  prompts_loader.py  react_agent.py  state_graph.py  util.py
app/api/: auth.py  brute_force_protection.py  chat.py  playground.py
app/api/playground/: __init__.py  chat.py  embeddings.py
app/config/: agent_config.py
app/graph/: graph_client.py
app/schemas/: __init__.py  auth.py  chat.py  embeddings.py
app/tools/: tools.py
conf/prompts/: system_prompt.txt
docker/: docker-compose-hugegraph.yml  docker-compose-neo4j.yml  docker-compose.yml
examples/: auth_mode_examples.md
web/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  index.html  main.ts  style.css
web/src/common/: useLogout.ts
web/src/components/: ChatHistory.vue  ChatMax.vue  ChatPanel.vue  Dashboard.vue  Embeddings.vue  LanguageSwitcher.vue  LoginForm.vue  Playground.vue
web/src/components/factory/: Overview.vue  Playground.vue  constants.ts  useAgent.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.ts  zh.ts
web/src/router/: index.ts
web/src/stores/: useApisStore.ts  useChatMaxStore.ts
