[project]
name = "morn-agent"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "blockcontent",
    "langchain-core==0.3.65",
    "langchain-mcp-adapters==0.1.7",
    "langchain-community",
    "langchain_openai",
    "uvicorn",
    "pandas",
    "langgraph>=0.4.8",
    "openpyxl",
    "mcp",
    "langchain-deepseek>=0.1.3",
    "ipython>=8.37.0",
    "pillow>=11.2.1",
    "matplotlib>=3.10.3",
    "langmem>=0.0.27"
]

[project.urls]
Homepage = "https://github.com/morn-ai/morn-agent"
Repository = "https://github.com/morn-ai/morn-agent"
Documentation = "https://github.com/morn-ai/morn-agent#readme"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
line-length = 120
