[project]
name = "morn"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "httpx",
    "hugegraph-python",
    "langchain",
    "langchain-openai",
    "langgraph",
    "python-jose[cryptography]",
    "sse-starlette",
    "types-python-jose",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/morn-ai/morn"
Repository = "https://github.com/morn-ai/morn"
Documentation = "https://github.com/morn-ai/morn#readme"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
line-length = 120
